--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -7,47 +7,127 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="https://use.fontawesome.com/1fb0eb3889.js"></script>
   <title>Where work happens | Slack</title>
+  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Montserrat:400,700" rel="stylesheet">
+  <link rel="stylesheet" href="./stylesheets/style.css">
+  <link rel="icon" href="./images/Slack.ico">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
 </head>
 
 <body>
+
   <nav>
-    <img src="./images/slack-logo.png" alt="slack_logo">
-    <ul>
-      <li>Why Slack?</li>
-      <li>Pricing</li>
-      <li>About Us</li>
-      <li>Your Workspaces</li>
-    </ul>
-  </nav>
-  <header>
-    <img src="./images/home_talking.png" alt="home_work_happening">
-    <h1>Where Work Happens</h1>
-    <p>When your team needs to kick off a project, hire a new employee, deploy some code, review a sales contract, finalize next year's budget, measure an A/B test, plan your next office opening, and more, Slack has you covered.</p>
-    <button type="button" name="button">GET STARTED</button>
-    <p>Already using Slack? <a href="#">Sign in</a></p>
-  </header>
-  <main>
-    <div>
-      <h2>You´re in good company</h2>
-      <p>Millions of people around the world have already made Slack the place where their work happens.</p>
-      <button>DISCOVER WHY</button>
-      <img src="./images/airbnb-logo.png" alt="">
-      <img src="./images/capital-one-logo.png" alt="">
-      <img src="./images/harvard-logo.png" alt="">
-      <img src="./images/los-angeles-times-logo.png" alt="">
-      <img src="./images/oracle-logo.png" alt="">
-      <img src="./images/ticketmaster-logo.png" alt="">
+    <div class="nav-container">
+      <div class="logo-container">
+        <img src="./images/slack-logo.png" alt="slack_logo">
+      </div>
+      <ul>
+        <li class="hamburger-menu"><i class="fas fa-bars"></i></li>
+        <li class="nav-listitem">
+          <span> Why Slack? </span>
+          <div class="dropdown">
+            <h4 class="dropdown-title">About the Products</h4>
+            <ul>
+              <li class="dropdown-item">How it works</li>
+              <li class="dropdown-item">Security</li>
+              <li class="dropdown-item">Customers</li>
+              <li class="dropdown-item">Enterprise</li>
+            </ul>
+          </div>
+        </li>
+        <li class="nav-listitem">
+          <span> Solutions </span>
+          <div class="dropdown">
+            <h4 class="dropdown-title">Slack for every team</h4>
+            <div class="row2">
+              <ul>
+                <li class="dropdown-item">Engineering</li>
+                <li class="dropdown-item">IT</li>
+                <li class="dropdown-item">Customer Support</li>
+              </ul>
+              <ul>
+                <li class="dropdown-item">Sales</li>
+                <li class="dropdown-item">Marketing</li>
+                <li class="dropdown-item">Human resources</li>
+              </ul>
+            </div>
+          </div>
+        </li>
+        <li class="nav-listitem">
+          <span> Resources </span>
+          <div class="dropdown">
+            <h4 class="dropdown-title">go further with slack</h4>
+            <div class="row2">
+              <ul>
+                <li class="dropdown-item">Download</li>
+                <li class="dropdown-item">Blog</li>
+                <li class="dropdown-item">Help Center</li>
+              </ul>
+              <ul>
+                <li class="dropdown-item">eBooks & Reports</li>
+                <li class="dropdown-item">App Directory</li>
+                <li class="dropdown-item">API</li>
+              </ul>
+            </div>
+          </div>
+        </li>
+        <li class="nav-listitem"> <span> Pricing </span> </li>
+        <li class="nav-btn-right"> <button>Your workspaces</button></li>
+      </ul>
     </div>
-    <div>
-      <p>Try it for free</p>
-      <p>Already using Slack? <a href="">Sign in</a></p>
-      <button type="button" name="button">GET STARTED</button>
+  </nav>
+
+  <header>
+    <div class="header-container">
+      <div class="header-left">
+        <img src="./images/home_talking.png" alt="home_work_happening">
+      </div>
+      <div class="header-right">
+        <h1>Where Work Happens</h1>
+        <p class="paragraph">When your team needs to kick off a project, hire a new employee, deploy some code, review
+          a sales contract, finalize next year's budget, measure an A/B test, plan your next office opening, and more,
+          Slack has you covered.</p>
+        <button type="button" class="btn blue" name="button">GET STARTED</button>
+        <p class="smalltext">Already using Slack? <a href="#">Sign in.</a></p>
+      </div>
+    </div>
+  </header>
+
+  <main>
+    <div class="main-container">
+      <div class="main-content">
+        <h2>You´re in good company</h2>
+        <p>Millions of people around the world have already made Slack the place where their work happens.</p>
+        <button class="btn white">DISCOVER WHY</button>
+      </div>
+      <div class="icon-container">
+        <img src="./images/ticketmaster-logo.png" alt="">
+        <img src="./images/airbnb-logo.png" alt="">
+        <img src="./images/capital-one-logo.png" alt="">
+        <img src="./images/harvard-logo.png" alt="">
+        <img src="./images/los-angeles-times-logo.png" alt="">
+        <img src="./images/oracle-logo.png" alt="">
+      </div>
+
+
+      <div class="bottom-call">
+
+        <div class="bot-cal-left">
+          <h3>Try it for free</h3>
+          <p class="smalltext">Already using Slack? <a href="">Sign in</a></p>
+        </div>
+
+        <div>
+          <button type="button" class="btn white" name="button">GET STARTED</button>
+        </div>
+      </div>
     </div>
   </main>
+
+
   <footer>
-    <div>
+    <div class="footlinks">
       <img src="./images/iso-slack.png" alt="">
-      <ul>
+      <ul class="footlists">
         <li>COMPANY</li>
         <li>About Us</li>
         <li>Careers</li>
@@ -55,7 +135,7 @@
         <li>Press</li>
         <li>Brand Guidelines</li>
       </ul>
-      <ul>
+      <ul class="footlists">
         <li>PRODUCT</li>
         <li>Why Slack?</li>
         <li>Enterprise</li>
@@ -63,7 +143,7 @@
         <li>Pricing</li>
         <li>Security</li>
       </ul>
-      <ul>
+      <ul class="footlists">
         <li>RESOURCES</li>
         <li>Download</li>
         <li>Help Center</li>
@@ -72,7 +152,7 @@
         <li>App Directory</li>
         <li>API</li>
       </ul>
-      <ul>
+      <ul class="footlists">
         <li>EXTRAS</li>
         <li>Podcast</li>
         <li>Slack Shop</li>
@@ -80,7 +160,7 @@
         <li>Slack Fund</li>
       </ul>
     </div>
-    <div>
+    <!-- <div>
       <ul>
         <li>Status</li>
         <li>Privacy & Terms</li>
@@ -93,9 +173,19 @@
         <i class="fa fa-twitter" aria-hidden="true"></i>
         <i class="fa fa-facebook" aria-hidden="true"></i>
         <i class="fa fa-youtube-play" aria-hidden="true"></i>
-      </div>
+      </div> -->
     </div>
   </footer>
+
+  <script>
+        let mainNav = document.getElementById("js-menu");
+        let navBarToggle = document.getElementById("js-navbar-toggle");
+  
+        navBarToggle.addEventListener("click", function() {
+          mainNav.classList.toggle("active");
+        });
+      </script>
 </body>
 
 </html>
+
