--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -14,14 +14,13 @@
 </head>
 
 <body>
-
-  <nav>
+<nav>
     <div class="nav-container">
       <div class="logo-container">
-        <img src="./images/slack-logo.png" alt="slack_logo">
+        <img src="./images/slack-logo.png" alt="slack_logo" />
       </div>
       <ul>
-        <li class="hamburger-menu"><i class="fas fa-bars"></i></li>
+        <i class="hamburger-menu"><i class="fas fa-bars"></i></li>
         <li class="nav-listitem">
           <span> Why Slack? </span>
           <div class="dropdown">
@@ -178,12 +177,12 @@
   </footer>
 
   <script>
-        let mainNav = document.getElementById("js-menu");
-        let navBarToggle = document.getElementById("js-navbar-toggle");
+        // let mainNav = document.getElementById("js-menu");
+        // let navBarToggle = document.getElementById("js-navbar-toggle");
   
-        navBarToggle.addEventListener("click", function() {
-          mainNav.classList.toggle("active");
-        });
+        // navBarToggle.addEventListener("click", function() {
+        //   mainNav.classList.toggle("active");
+        // });
       </script>
 </body>
 
